[package]
name = "webserver_template"
version = "0.1.0"
authors = ["PockelHockel <pockelhockel1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4", features = ["tls"] }
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4"
default_features = false
# Add your database type as described here https://rocket.rs/v0.4/guide/state/#databases
features = ["handlebars_templates", "json", "serve"]
