[package]
name = "webserver_template"
version = "0.1.0"
authors = [] #Fixme
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.2.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
branch = "master"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
branch = "master"
default_features = false
features = ["handlebars_templates", "json", "serve"]
