[package]
name = "webserver_template" #Fixme
version = "0.1.0"
authors = [] #Fixme
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rocket = { version = "0.5.0-rc.1", features = ["json", "secrets"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["handlebars"] }
